Fix dark mode for homepage

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,5 +1,5 @@
 .Home-register {
-  background: var(--color-accent);
+  background: var(--color-accent-on-light);
   padding: 2rem;
   color: #fff;
   padding-inline: 2rem;
